trunk/Archive2/70/60bcd008058a72/output
main.cpp: In function 'int main()':
main.cpp:6:6: error: assignment of read-only variable 'x'
    x = 1;
      ^
